--- a/bin/src/main/resources/templates/crearpago.html
+++ b/bin/src/main/resources/templates/crearpago.html
@@ -5,19 +5,26 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}"
       rel="stylesheet" />
-<title>Crear Capacitaciones</title>
+<title>Crear Pago</title>
 </head>
 <body>
 <div class="container">
   <div class="row">
     <div class="col">
-       <form th:action="@{agregarCapacitaciones}" method="post" th:object="${capacitacion}">
-	     <label for="nombre" class="form-label">Nombre</label> 
-     	    <input class="form-control" type="text" name="nombre" th:field="*{nombre}"/>
+       <form th:action="@{/addPago}" method="post" th:object="${pago}">
+
+	     <label for="cliente_id" class="form-label">Cliente ID</label> 
+     	    <input class="form-control" type="number" name="cliente_id" th:field="*{cliente_id}"/>
 	        <br>
-	    <label for="detalle"  class="form-label">Detalle</label> 
-	        <input class="form-control" type="text" name="detalle" th:field="*{detalle}"/>
+
+	     <label for="monto" class="form-label">Monto</label> 
+     	    <input class="form-control" type="number" name="monto" th:field="*{monto}"/>
 	        <br>
+
+	     <label for="fecha_pago" class="form-label">Fecha de pago</label> 
+     	    <input class="form-control" type="text" name="fecha_pago" th:field="*{fecha_pago}"/>
+	        <br>
+
       <input type="submit" class="btn btn-primary" name="guardar" value="Guardar" />
      </form>
   </div>
