--- a/bin/src/main/resources/templates/crearusuario.html
+++ b/bin/src/main/resources/templates/crearusuario.html
@@ -5,19 +5,20 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}"
       rel="stylesheet" />
-<title>Crear Capacitaciones</title>
+<title>Crear Usuario</title>
 </head>
 <body>
 <div class="container">
   <div class="row">
     <div class="col">
-       <form th:action="@{agregarCapacitaciones}" method="post" th:object="${capacitacion}">
+       <form th:action="@{/addUsuario}" method="post" th:object="${usuario}">
 	     <label for="nombre" class="form-label">Nombre</label> 
      	    <input class="form-control" type="text" name="nombre" th:field="*{nombre}"/>
 	        <br>
-	    <label for="detalle"  class="form-label">Detalle</label> 
-	        <input class="form-control" type="text" name="detalle" th:field="*{detalle}"/>
+	    <label for="tipo"  class="form-label">Tipo</label> 
+	        <input class="form-control" type="text" name="tipo" th:field="*{tipo}"/>
 	        <br>
+
       <input type="submit" class="btn btn-primary" name="guardar" value="Guardar" />
      </form>
   </div>
