--- a/bin/src/main/resources/templates/listarpagos.html
+++ b/bin/src/main/resources/templates/listarpagos.html
@@ -8,27 +8,28 @@
 	rel="stylesheet" />
 
 
-<title>Listar Capacitaciones</title>
+<title>Listar Pagos</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col">
 				<div
-					th:if="${listaCapacitaciones !=null and !listaCapacitaciones.empty}">
+					th:if="${listarPagos !=null and !listarPagos.empty}">
 					<table class="table table-striped table-hover">
 						<tr>
 							<th>Nombre</th>
-							<th>Detalle</th>
+							<th>Tipo</th>
 						</tr>
-						<tr th:each="capacitacion : ${listaCapacitaciones}">
-							<td th:text="${capacitacion.nombre}">Mostrar Nombre</td>
-							<td th:text="${capacitacion.detalle}">Mostrar Detalle</td>
+						<tr th:each="pagos : ${listarPagos}">
+							<td th:text="${pagos.cliente_id}">Mostrar cliente id</td>
+							<td th:text="${pagos.monto}">Mostrar monto</td>
+							<td th:text="${pagos.fecha_pago}">Mostrar fecha_pago</td>
 						</tr>
 					</table>
 				</div>
 				<div
-					th:if="${listaCapacitaciones == null or listaCapacitaciones.empty}">
+					th:if="${listarPagos == null or listarPagos.empty}">
 					<p>La lista está vacía</p>
 				</div>
 			</div>
