--- a/bin/src/main/resources/templates/listarusuarios.html
+++ b/bin/src/main/resources/templates/listarusuarios.html
@@ -8,27 +8,27 @@
 	rel="stylesheet" />
 
 
-<title>Listar Capacitaciones</title>
+<title>Listar Usuarios</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col">
 				<div
-					th:if="${listaCapacitaciones !=null and !listaCapacitaciones.empty}">
+					th:if="${listarUsuarios !=null and !listarUsuarios.empty}">
 					<table class="table table-striped table-hover">
 						<tr>
 							<th>Nombre</th>
-							<th>Detalle</th>
+							<th>Tipo</th>
 						</tr>
-						<tr th:each="capacitacion : ${listaCapacitaciones}">
-							<td th:text="${capacitacion.nombre}">Mostrar Nombre</td>
-							<td th:text="${capacitacion.detalle}">Mostrar Detalle</td>
+						<tr th:each="usuarios : ${listarUsuarios}">
+							<td th:text="${usuarios.nombre}">Mostrar Nombre</td>
+							<td th:text="${usuarios.tipo}">Mostrar Detalle</td>
 						</tr>
 					</table>
 				</div>
 				<div
-					th:if="${listaCapacitaciones == null or listaCapacitaciones.empty}">
+					th:if="${listarUsuarios == null or listarUsuarios.empty}">
 					<p>La lista está vacía</p>
 				</div>
 			</div>
