--- a/bin/src/main/resources/templates/listarvisitas.html
+++ b/bin/src/main/resources/templates/listarvisitas.html
@@ -8,27 +8,29 @@
 	rel="stylesheet" />
 
 
-<title>Listar Capacitaciones</title>
+<title>Listar Visitas</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col">
 				<div
-					th:if="${listaCapacitaciones !=null and !listaCapacitaciones.empty}">
+					th:if="${listarVisitas !=null and !listarVisitas.empty}">
 					<table class="table table-striped table-hover">
 						<tr>
 							<th>Nombre</th>
-							<th>Detalle</th>
+							<th>Tipo</th>
 						</tr>
-						<tr th:each="capacitacion : ${listaCapacitaciones}">
-							<td th:text="${capacitacion.nombre}">Mostrar Nombre</td>
-							<td th:text="${capacitacion.detalle}">Mostrar Detalle</td>
+						<tr th:each="visitas : ${listarVisitas}">
+							<td th:text="${visitas.tipo}">Mostrar tipo</td>
+							<td th:text="${visitas.cliente_id}">Mostrar cliente id</td>
+							<td th:text="${visitas.profesional_id}">Mostrar profesional id</td>
+							<td th:text="${visitas.nombre}">Mostrar nombre</td>
 						</tr>
 					</table>
 				</div>
 				<div
-					th:if="${listaCapacitaciones == null or listaCapacitaciones.empty}">
+					th:if="${listarVisitas == null or listarVisitas.empty}">
 					<p>La lista está vacía</p>
 				</div>
 			</div>
