--- a/src/main/resources/templates/editarcapacitacion.html
+++ b/src/main/resources/templates/editarcapacitacion.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}"
       rel="stylesheet" />
-<title>Crear Usuario</title>
+<title>Editar Capacitación</title>
 </head>
 <body>
 <div class="container">
   <div class="row">
     <div class="col">
-       <form th:action="@{/agregarUsuarios}" method="post" th:object="${usuario}">
+       <form th:action="@{actualizarCapacitaciones}" method="post" th:object="${capacitacion}">
+       
+       	 <label for="id" class="form-label">ID</label> 
+     	    <input class="form-control" type="text" name="id" th:field="*{id}" readonly/>
+	        <br>
 	     <label for="nombre" class="form-label">Nombre</label> 
      	    <input class="form-control" type="text" name="nombre" th:field="*{nombre}"/>
 	        <br>
-	    <label for="tipo"  class="form-label">Tipo</label> 
-	        <input class="form-control" type="text" name="tipo" th:field="*{tipo}"/>
+	    <label for="detalle"  class="form-label">Detalle</label> 
+	        <input class="form-control" type="text" name="detalle" th:field="*{detalle}"/>
 	        <br>
-
       <input type="submit" class="btn btn-primary" name="guardar" value="Guardar" />
      </form>
   </div>
   </div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
-
