--- a/src/main/resources/templates/listarpagos.html
+++ b/src/main/resources/templates/listarpagos.html
@@ -18,13 +18,14 @@
 					th:if="${listarPagos !=null and !listarPagos.empty}">
 					<table class="table table-striped table-hover">
 						<tr>
-							<th>Nombre</th>
-							<th>Tipo</th>
+							<th>ID Cliente</th>
+							<th>Monto</th>
+							<th>Fecha de pago</th>
 						</tr>
 						<tr th:each="pagos : ${listarPagos}">
-							<td th:text="${pagos.cliente_id}">Mostrar cliente id</td>
-							<td th:text="${pagos.monto}">Mostrar monto</td>
-							<td th:text="${pagos.fecha_pago}">Mostrar fecha_pago</td>
+							<td th:text="${pagos.cliente_id}"></td>
+							<td th:text="${pagos.monto}"></td>
+							<td th:text="${pagos.fecha_pago}"></td>
 						</tr>
 					</table>
 				</div>
