--- a/src/main/resources/templates/listarvisitas.html
+++ b/src/main/resources/templates/listarvisitas.html
@@ -18,14 +18,16 @@
 					th:if="${listarVisitas !=null and !listarVisitas.empty}">
 					<table class="table table-striped table-hover">
 						<tr>
-							<th>Nombre</th>
-							<th>Tipo</th>
+							<th>ID Cliente</th>
+							<th>Fecha visita</th>
+							<th>Detalle</th>
+							<th>ID Profesional</th>
 						</tr>
 						<tr th:each="visitas : ${listarVisitas}">
-							<td th:text="${visitas.tipo}">Mostrar tipo</td>
-							<td th:text="${visitas.cliente_id}">Mostrar cliente id</td>
-							<td th:text="${visitas.profesional_id}">Mostrar profesional id</td>
-							<td th:text="${visitas.nombre}">Mostrar nombre</td>
+							<td th:text="${visitas.cliente_id}"></td>
+							<td th:text="${visitas.fecha_visita}"></td>
+							<td th:text="${visitas.detalle}"></td>
+							<td th:text="${visitas.profesional_id}"></td>
 						</tr>
 					</table>
 				</div>
