--- a/src/main/resources/templates/buscarcapacitacion.html
+++ b/src/main/resources/templates/buscarcapacitacion.html
@@ -5,6 +5,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}"
       rel="stylesheet" />
+
+<link href="../static/css/styles.css" th:href="@{css/styles.css}" rel="stylesheet"/>
+
 <title>Buscar Capacitación</title>
 </head>
 <body>
