--- a/src/main/resources/templates/listarvisitas.html
+++ b/src/main/resources/templates/listarvisitas.html
@@ -7,6 +7,7 @@
 	th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}"
 	rel="stylesheet" />
 
+<link href="../static/css/styles.css" th:href="@{css/styles.css}" rel="stylesheet"/>
 
 <title>Listar Visitas</title>
 </head>
