--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 </head>
+<link href="../static/css/styles.css" th:href="@{css/styles.css}" rel="stylesheet"/>
 <body>
    <h1>Login</h1>
    <form name='f' action="/api/auth/signin" method='POST'>
