agrear menu (html)

--- a/src/main/resources/templates/listarvisitas.html
+++ b/src/main/resources/templates/listarvisitas.html
@@ -12,6 +12,7 @@
 <title>Listar Visitas</title>
 </head>
 <body>
+    <div th:insert="./menu.html :: div"> </div>
 	<div class="container">
 		<div class="row">
 			<div class="col">
