--- a/src/main/resources/templates/buscarcapacitacion.html
+++ b/src/main/resources/templates/buscarcapacitacion.html
@@ -11,6 +11,7 @@
 <title>Buscar Capacitación</title>
 </head>
 <body>
+    <div th:insert="./menu.html :: div"> </div>
 <div class="container">
   <div class="row">
     <div class="col">
