--- a/src/main/resources/templates/buscarusuario.html
+++ b/src/main/resources/templates/buscarusuario.html
@@ -10,6 +10,7 @@
 <title>Buscar Usuario</title>
 </head>
 <body>
+    <div th:insert="./menu.html :: div"> </div>
 <div class="container">
   <div class="row">
     <div class="col">
