--- a/src/main/resources/templates/editarusuario.html
+++ b/src/main/resources/templates/editarusuario.html
@@ -9,6 +9,7 @@
 <title>Editar Usuario</title>
 </head>
 <body>
+    <div th:insert="./menu.html :: div"> </div>
 <div class="container">
   <div class="row">
     <div class="col">
