--- a/src/main/resources/templates/listarcapacitaciones.html
+++ b/src/main/resources/templates/listarcapacitaciones.html
@@ -11,6 +11,7 @@
 <title>Listar Capacitaciones</title>
 </head>
 <body>
+    <div th:insert="./menu.html :: div"> </div>
 	<div class="container">
 		<div class="row">
 			<div class="col">
