actulizar links menu

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -13,19 +13,19 @@
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="./">Inicio</a></li>
 					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="./contacto">Contacto</a></li>
+						aria-current="page" href="/contacto">Contacto</a></li>
 					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="./crearCapacitacion">Crear
+						aria-current="page" href="/crearCapacitacion">Crear
 							Capacitación</a></li>
 					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="./ListarCapacitaciones">Listar
+						aria-current="page" href="/listarCapacitaciones">Listar
 							Capacitaciones</a></li>
 					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="./crearUsuario">Crear usuario</a></li>
+						aria-current="page" href="/crearUsuario">Crear usuario</a></li>
 					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="./ListarUsuarios">Listar usuarios</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="./cerrarSesion">Cerrar sesión</a></li>
+						aria-current="page" href="/listarUsuarios">Listar usuarios</a></li>
+
+
 				</ul>
 			</div>
 		</div>
