--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,1 +1,13 @@
 @charset "UTF-8";
+
+div .est {
+	background-color: #ffffff;
+	padding: 1.5em;
+	box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.508);
+	border-radius: 7px;
+}
+
+body {
+	background-image: url("https://fondosmil.com/fondo/17010.jpg");
+	color: white;
+}
