--- a/src/main/resources/templates/crearcapacitacion.html
+++ b/src/main/resources/templates/crearcapacitacion.html
@@ -14,6 +14,7 @@
   <div class="row">
     <div class="col">
        <form th:action="@{agregarCapacitaciones}" method="post" th:object="${capacitacion}">
+       <h1>Formulario de capacitación:</h1>
 	     <label for="nombre" class="form-label">Nombre</label> 
      	    <input class="form-control" type="text" name="nombre" th:field="*{nombre}"/>
 	        <br>
