--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,37 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+	th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}"
+	rel="stylesheet" />
+<link href="../static/css/styles.css" th:href="@{css/styles.css}"
+	rel="stylesheet" />
+<title>Empresa Prevención De Riesgo</title>
 </head>
 <body>
-<p> INDEX pagina </p>
+	<div th:insert="./menu.html :: div"></div>
+	<div>
+		<div class="container" align="center">
+			<div class="row">
+				<div class="col">
+					<div class="px-4 pt-5 my-5 text-center">
+						<h1 class="fw-bold text-body-emphasis">Empresa Prevención De
+							Riesgos</h1>
+						<div class="col-lg-6 mx-auto ">
+							<p class="about w-100 lead mt-5 mb-4 text-justify">Somos la
+								compañía líder en Prevención de Riesgos Laborales y nuestro
+								objetivo es garantizar la seguridad en tu compañía y cuidar de
+								la salud de tus profesionales.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
 </body>
 </html>
