--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,33 +1,133 @@
-<div class="mb-3">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="/M6SprintFinal">Menu</a>
-			<button class="navbar-toggler" type="button"
-				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="./">Inicio</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/contacto">Contacto</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/crearCapacitacion">Crear
-							Capacitación</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/listarCapacitaciones">Listar
-							Capacitaciones</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/crearUsuario">Crear usuario</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/listarUsuarios">Listar usuarios</a></li>
-
-
-				</ul>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+	th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}"
+	rel="stylesheet" />
+<link href="../static/css/styles.css" th:href="@{css/styles.css}"
+	rel="stylesheet" />
+</head>
+<body>
+	<div class="mb-3">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="./">Menu</a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+					aria-controls="navbarNavDropdown" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="./">Inicio</a></li>
+						<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#"
+							id="navbarDropdownMenuLink" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">Contacto</a>
+							<ul class="dropdown-menu"
+								aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="/crearContacto">Crear Contacto</a></li>
+								<li><a class="dropdown-item" href="/listarContacto">Listar Contacto</a></li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#"
+							id="navbarDropdownMenuLink" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">Capacitaciones</a>
+							<ul class="dropdown-menu"
+								aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="/crearCapacitacion">Crear Capacitación</a></li>
+								<li><a class="dropdown-item" href="/buscarCapa">Editar Capacitación</a></li>
+								<li><a class="dropdown-item" href="/listarCapacitaciones">Listar Capacitación</a></li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#"
+							id="navbarDropdownMenuLink" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">Usuarios</a>
+							<ul class="dropdown-menu"
+								aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="/crearUsuarios">Crear Usuarios</a></li>
+								<li><a class="dropdown-item" href="/buscarUsu">Editar Usuarios</a></li>
+								<li><a class="dropdown-item" href="/listarUsuarios">Listar Usuarios</a></li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#"
+							id="navbarDropdownMenuLink" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">Pagos</a>
+							<ul class="dropdown-menu"
+								aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="/crearPagos">Crear Pagos</a></li>
+								<li><a class="dropdown-item" href="/buscarPag">Editar Pagos</a></li>
+								<li><a class="dropdown-item" href="/listarPagos">Listar Pagos</a></li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#"
+							id="navbarDropdownMenuLink" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">Visitas</a>
+							<ul class="dropdown-menu"
+								aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="/crearVisita">Crear Visitas</a></li>
+								<li><a class="dropdown-item" href="/buscarVisi">Editar Visitas</a></li>
+								<li><a class="dropdown-item" href="/listarVisitas">Listar Visitas</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</nav>
-</div>
+		</nav>
+
+		<!-- 
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/M6SprintFinal">Menu</a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="./">Inicio</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/crearContacto">Contacto</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/crearCapacitacion">Crear
+								Capacitación</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/listarCapacitaciones">Listar
+								Capacitaciones</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/crearUsuarios">Crear usuario</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/listarUsuarios">Listar usuarios</a></li>
+					</ul>
+				</div>
+				<div class="dropdown">
+					<a class="btn btn-secondary dropdown-toggle" href="#" role="button"
+						id="dropdownMenuLink" data-bs-toggle="dropdown"
+						aria-expanded="false">Contacto</a>
+
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+						<li><a class="dropdown-item" href="/crearContacto">Crear Contacto</a></li>
+						<li><a class="dropdown-item" href="/listarContacto">Listar Contacto</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		 -->
+	</div>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
